project-angular/src/styles.css
/* You can add global styles to this file, and also import other style files */
ul {
  margin: 0;
  padding: 0;
  margin-bottom: 10px;
}

ul > li {
  list-style-type: none;
}

.marginTop {

  margin-top: 4vh;

}
.row {
  margin-left: 0 !important;
  margin-right: 0 !important;
}

